--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "feedback-app",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:5000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "concurrently": "^8.2.1",
+    "cross-env": "^7.0.3",
     "framer-motion": "^10.16.4",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
@@ -21,7 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch db.json --port 5000"
+    "server": "json-server --watch db.json --port 5000",
+    "dev":"concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
